Add mime-type to ebook download links
The download links on the site are untyped for the ebooks. As reported
in progit/progit#796 this prevents from downloading the ebooks directly
on the reader's tablet.

This change is only compatible with html5 and may not work on old
browser. A better alternative would be to set up the mime types for epub
and mobi in the web server configuration files.

--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -44,9 +44,9 @@
         <a href="http://www.amazon.com/gp/product/1430218339?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon</a>
         and
         <a href="https://github.s3.amazonaws.com/media/progit.en.pdf">PDF</a>,
-        <a href="https://github.s3.amazonaws.com/media/pro-git.en.mobi">mobi</a>,
+        <a href="https://github.s3.amazonaws.com/media/pro-git.en.mobi" type="application/x-mobipocket-ebook">mobi</a>,
         and
-        <a href="https://github.s3.amazonaws.com/media/progit.epub">ePub</a> versions are available for free.
+        <a href="https://github.s3.amazonaws.com/media/progit.epub" type="application/epub+zip">ePub</a> versions are available for free.
       </p>
 
       <p>
