--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -46,12 +46,12 @@
     <%= partial 'shared/monitor' %>
     <table>
       <tr>
-        <td wrap="true"><%= link_to "Graphical UIs", "/downloads/guis", class: 'icon gui', id: 'gui-link' %></td>
-        <td wrap="true"><%= link_to "Tarballs", "https://www.kernel.org/pub/software/scm/git/", class: 'icon older-releases' %></td>
+        <td nowrap="true"><%= link_to "Graphical UIs", "/downloads/guis", class: 'icon gui', id: 'gui-link' %></td>
+        <td nowrap="true"><%= link_to "Tarballs", "https://www.kernel.org/pub/software/scm/git/", class: 'icon older-releases' %></td>
       </tr>
       <tr>
-        <td wrap="true"><%= link_to "Windows Build", "/download/win", class: 'icon windows', id: 'alt-link' %></td>
-        <td wrap="true"><%= link_to "Source Code", "https://github.com/git/git", class: 'icon source' %></td>
+        <td nowrap="true"><%= link_to "Windows Build", "/download/win", class: 'icon windows', id: 'alt-link' %></td>
+        <td nowrap="true"><%= link_to "Source Code", "https://github.com/git/git", class: 'icon source' %></td>
       </tr>
     </table>
 </section>
