add openSUSE install instructions

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -17,6 +17,9 @@
   <h3>Arch Linux</h3>
   <code>$ pacman -S git</code>
 
+  <h3>openSUSE</h3>
+  <code>$ zypper install git</code>
+
   <h3>FreeBSD</h3>
   <code>$ cd /usr/ports/devel/git<br>$ make install</code>
 
