Add Farsi to started translation of the book

--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -29,6 +29,7 @@ Translations started for
   <a href="/book/ca">Català</a>,
   <a href="/book/eo">Esperanto</a>,
   <a href="/book/es-ni">Español (Nicaragua)</a>,
+  <a href="/book/fa" dir="rtl">فارسی</a>,
   <a href="/book/hi">हिन्दी</a>,
   <a href="/book/hu">Magyar</a>,
   <a href="/book/no-nb">Norwegian Bokmål</a>,
