Refactor doc controller

--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -1,12 +1,12 @@
 <a class="dropdown-trigger" id="reference-versions-trigger" data-panel-id="previous-versions-dropdown" href="#">Version <%= @version.name %> ▾</a>
-<span class="light"><%= @file.name %> last updated in <%= @last.version.name %></span>
+<span class="light"><%= @doc_file.name %> last updated in <%= @last.version.name %></span>
 <div class='dropdown-panel left' id='previous-versions-dropdown'>
-  <header>Changes in the <strong><%= @file.name %></strong> manual</header>
+  <header>Changes in the <strong><%= @doc_file.name %></strong> manual</header>
   <ol class='reference-previous-versions'>
     <% @versions.each do |v| %>
       <% if v[:changed] %>
         <li>
-        <a href="/docs/<%= @file.name %>/<%= v[:name] %>"><span class="version"><%= v[:name] %></span>
+        <a href="/docs/<%= @doc_file.name %>/<%= v[:name] %>"><span class="version"><%= v[:name] %></span>
           <span class="diff">
             <% v[:diff][0].times do %>
               <img src="/images/icons/green-dot.png" />
