--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -1,15 +1,17 @@
 <% @section    = 'documentation' %>
 <% @subsection = 'reference' %>
 
-<% content_for :sidebar do %>
-  <%= render 'shared/related' %>
+<% cache @doc do %>
+  <% content_for :sidebar do %>
+    <%= render 'shared/related' %>
+  <% end %>
+
+  <div id='reference-version'>
+    <%= render 'doc/topics' %>
+    <%= render 'doc/versions' %>
+  </div>
+
+  <div id='main'>
+    <%=raw @doc.html %>
+  </div>
 <% end %>
-
-<div id='reference-version'>
-  <%= render 'doc/topics' %>
-  <%= render 'doc/versions' %>
-</div>
-
-<div id='main'>
-  <%=raw @doc.html %>
-</div>
