Project to Projects

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -58,7 +58,7 @@
 </div>
 
 <section id="companies-projects">
-  <h3> Companies &amp; Project Using Git </h3>
+  <h3> Companies &amp; Projects Using Git </h3>
   <ul>
     <li><%= link_to "Google", "https://github.com/google", class: 'google' %></li>
     <li><%= link_to "Facebook", "https://github.com/facebook", class: 'facebook' %></li>
