Refactor version_changes method

--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -3,7 +3,7 @@
 <div class='dropdown-panel left' id='previous-versions-dropdown'>
   <header>Changes in the <strong><%= @doc_file.name %></strong> manual</header>
   <ol class='reference-previous-versions'>
-    <% @versions.each do |v| %>
+    <% @doc_file.version_changes.each do |v| %>
       <% if v[:changed] %>
         <li>
         <a href="/docs/<%= @doc_file.name %>/<%= v[:name] %>"><span class="version"><%= v[:name] %></span>
