add "Git Beginner's Guide for Dummies" to external-links page

--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -33,6 +33,12 @@
             A guided tour that walks through the fundamentals of Git.
           </p>
         </li>
+        <li>
+          <h4><a href="http://backlogtool.com/git-guide/en/">Git Beginner's Guide for Dummies</a></h4>
+          <p class='description'>
+            This guide includes an introduction for complete beginners as well as hands-on tutorials for intermediate learners.
+          </p>
+        </li>
       </ul>
     </div>
     <div class='column-right'>
