Fix missing end keyword

--- a/app/views/site/results.html.erb
+++ b/app/views/site/results.html.erb
@@ -1,13 +1,15 @@
 <% @section = "search" %>
 <% @subsection = "" %>
-<% @page_title = "Search results for #{h(@term)}" %>
+<%t st @page_title = "Search results for #{h(@term)}" %>
 
 <% content_for :sidebar do %>
   <%= render 'shared/related' %>
 <% end %>
 
 <div id="main">
+  
   <h1><%= raw "Search results for <strong>#{h(@term)}</strong>" %></h1>
+  
   <% if @top.size > 0 %>
     <div class="callout top-matches">
       <ol class="full-search-results">
@@ -20,7 +22,8 @@
         <% end %>
       </ol>
     </div>
-  <% end %>
+  <% end # @top.size > 0 %>
+
   <% if @rest.size > 0 %>
     <ol class="full-search-results">
       <% @rest.each do |hit| %>
@@ -43,8 +46,10 @@
             <%= raw highlight_no_html(hit[:highlight]) %>
           </p>
         </li>
+      <% end %>
     </ol>
   <% end %>
+  
   <% if @rest.size + @top.size == 0 %>
     <h2> Sorry, no search matches </h2>
   <% end %>
