--- a/app/views/site/results.html.erb
+++ b/app/views/site/results.html.erb
@@ -1,6 +1,6 @@
 <% @section = "search" %>
 <% @subsection = "" %>
-<%t st @page_title = "Search results for #{h(@term)}" %>
+<% @page_title = "Search results for #{h(@term)}" %>
 
 <% content_for :sidebar do %>
   <%= render 'shared/related' %>
