Redirect to howto file

--- a/app/assets/stylesheets/git-scm.css.scss
+++ b/app/assets/stylesheets/git-scm.css.scss
@@ -15,3 +15,25 @@
 @import "book";
 @import "lists";
 @import "blog";
+
+code {
+  display: inline;
+  padding: 0px 5px 0px 5px;
+}
+
+pre {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  display: block;
+  padding: 10px 15px 13px 15px;
+  margin-bottom: 1em;
+  background-color: #fff;
+  border: solid 1px #efeee6;
+  color: #f14e32;
+  font-family: Courier, monospace !important;
+  line-height: 18px;
+  overflow: auto
+}
