--- a/app/assets/stylesheets/book2.css.scss
+++ b/app/assets/stylesheets/book2.css.scss
@@ -287,7 +287,7 @@
   /* lists */
 
   ul, ol { /* bulleted and numbered lists */
-    margin: 10px 0 10px 0;
+    margin: 15px 0 15px 40px;
   }
 
   ul li, ol li,
