make 2nd edition html look better

--- a/app/assets/stylesheets/book2.css.scss
+++ b/app/assets/stylesheets/book2.css.scss
@@ -16,9 +16,9 @@
 
   p, dd { /* general text styles */
     font-family: sans-serif;
-    text-indent: 20px;
-    font-size: 1em;
-    line-height: 125%;
+    text-indent: 0px;
+    font-size: 14px;
+    line-height: 22px;
   }
 
   section[data-type="preface"] > h1 + p,
@@ -469,25 +469,27 @@
   }
 
   pre {
-    background: #ddd;
+    background: #eee;
     code {
       display: inline;
       border: 0px;
-      background: #ddd;
+      background: #eee;
     }
   }
 
   pre { /* code blocks */
     font-size: 0.9em;
     line-height: 120%;
-    margin: 10px;
+    margin: 10px 0px;
     overflow-x: auto;
     color: #333;
   }
 
   code { /* inline code */
-    font-size: 0.9em;
-    line-height: 120%;
+    border: 1px solid #f5f5f5;
+    padding: 3px;
+    background: #eee;
+    color: #333;
   }
 
   table pre { /* code blocks within tables */
@@ -685,7 +687,7 @@
 
   /* Chacon's additions to make command line look more like a command line */
   pre[data-code-language="console"] {
-    background: #ddd;
+    background: #eee;
     padding: 10px;
   }
   pre[data-code-language="console"] code.go {
