--- a/app/views/books/_chapter_listings.html.erb
+++ b/app/views/books/_chapter_listings.html.erb
@@ -4,13 +4,13 @@
   <% stop       = start + (per_column - 1)        -%>
   <% @book.chapters[start..stop].each do |chapter| %>
   <li class='chapter'>
-  <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/<%=u chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
+  <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
     <ol>
       <% chapter.sections.each do |section| %>
         <% if !section.title.empty? %>
           <li>
             <%= chapter.number %>.<%= section.number %>
-            <a href="/book/<%= @book.code %>/<%= u(section.slug) %>"><%=raw section.title %></a>
+            <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= u(section.slug) %>"><%=raw section.title %></a>
           </li>
         <% end %>
       <% end %>
