link to the right edition from the flippy book

--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -66,7 +66,7 @@
             <li class="chapter">
               <h2>
                 <%= chapter.number.to_s + '.' %>
-                <a href="/book/<%= @book.code %>/<%= chapter.sections.first.slug %>"><%= chapter.title %></a>
+                <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= chapter.sections.first.slug %>"><%= chapter.title %></a>
               </h2>
             </li>
           <% end %>
@@ -84,7 +84,7 @@
               <li class="chapter">
                 <h2>
                   <%= chapter.number.to_s + '.' %>
-                  <a href="/book/<%= @book.code %>/<%= chapter.sections.first.slug %>"><%= chapter.title %></a>
+                  <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= chapter.sections.first.slug %>"><%= chapter.title %></a>
                 </h2>
               </li>
             <% end %>
