--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -30,12 +30,12 @@
   <ol class='book-toc'>
     <% @book.chapters.each do |chapter| %>
     <li class='chapter'>
-    <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
+    <h2><%= chapter.cs_number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
       <ol>
         <% chapter.sections.each do |section| %>
           <% if !section.title.empty? %>
             <li>
-              <%= chapter.number %>.<%= section.number %>
+              <%= chapter.cs_number %>.<%= section.number %>
               <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%= u(section.slug) %>"><%=raw section.title %></a>
             </li>
           <% end %>
