--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -1,5 +1,5 @@
 <p>
-This book is translated into 
+This book is translated into
   <a href="/book/de">Deutsch</a>,
   <a href="/book/zh">简体中文</a>,
   <a href="/book/zh-tw">正體中文</a>,
@@ -41,6 +41,6 @@ Translations started for
 </p>
 <hr class="sidebar"/>
 <p>
-The source of this book and the translations are <a href="https://github.com/progit/progit">hosted on GitHub.</a></br>
+The source of this book is <a href="https://github.com/progit/progit2">hosted on GitHub.</a></br>
 Patches, suggestions, and comments are welcome.
 </p>
