--- a/app/views/doc/_ebooks.html.erb
+++ b/app/views/doc/_ebooks.html.erb
@@ -1,1 +1,5 @@
-<p>Download this book in <a href="https://github.s3.amazonaws.com/media/progit.en.pdf">PDF</a>, <a href="https://github.s3.amazonaws.com/media/pro-git.en.mobi" type="application/x-mobipocket-ebook">mobi</a>, or <a href="https://github.s3.amazonaws.com/media/progit.epub" type="application/epub+zip">ePub</a> form for free.</p>
+<% if @book.ebook_pdf %>
+<p>Download this book in <a href="<%= @book.ebook_pdf %>">PDF</a>,
+   <a href="<%= @book.ebook_mobi %>" type="application/x-mobipocket-ebook">mobi</a>,
+or <a href="<%= @book.ebook_epub %>" type="application/epub+zip">ePub</a> form for free.</p>
+<% end %>
