fix related sidebar elements

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -27,6 +27,7 @@ aside {
   margin-bottom: 35px;
 }
 
+
 #content {
   width: 702px;
   float: right;
@@ -112,6 +113,15 @@ header {
   }
 }
 
+ul.related-material {
+  font-weight: normal;
+  li {
+    a {
+      display: inline
+    }
+  }
+}
+
 // Navigation
 aside nav ul {
   list-style: none;
@@ -122,7 +132,6 @@ aside nav ul {
   li {
     margin-bottom: 0.5em;
     a {
-      display: block;
       color: #413932;
       &.active, &:hover {
         color: $orange;
