--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,14 +13,14 @@
     <div style="float:right;margin: -20px 40px 0 40px;">
       <img  src="/images/progit2.png" width="118" height="157"/>
       <div style="light">2nd Edition (2014)</div>
-      <div class="switch"><a href="/book/en/v1">Switch to 1st Edition</a></div>
+      <div class="switch"><a href="/book/<%= @book.code %>/v1">Switch to 1st Edition</a></div>
     </div>
   <% else %>
     <div style="float:right;margin: -20px 40px 0 40px;">
       <img  src="/images/books/pro-git@2x.jpg" width="118" height="157"/>
       <div>1st Edition (2009)</div>
       <% if @book.has_edition(2) %>
-        <div class="switch"><a href="/book/en/v2">Switch to 2nd Edition</a></div>
+        <div class="switch"><a href="/book/<%= @book.code %>/v2">Switch to 2nd Edition</a></div>
       <% end %>
     </div>
   <% end %>
