add progit2 links, Bens name, bigger ebook downloads

--- a/app/views/doc/rebase.html.haml
+++ b/app/views/doc/rebase.html.haml
@@ -4,7 +4,7 @@
 - content_for :sidebar do
   %div.callout
     %p
-      The entire <strong><a href="#">Pro Git book</a></strong> written by Scott Chacon is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
+      The entire <strong><a href="#">Pro Git book</a></strong> written by Scott Chacon and Ben Straub is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
 
 %div#reference-version
   =link_to "Topics ▾", "#", {:class => 'dropdown-trigger', :id => 'reference-topics-trigger', 'data-panel-id' => 'topics-dropdown'}
@@ -120,7 +120,7 @@
 
 
   =link_to "Version 1.7.9.4 ▾", "#", {:class => 'dropdown-trigger', :id => 'reference-versions-trigger', 'data-panel-id' => 'previous-versions-dropdown'}
-  <span class="light">git-rebase last updated in 1.7.7.1</span> 
+  <span class="light">git-rebase last updated in 1.7.7.1</span>
   %div#previous-versions-dropdown.dropdown-panel.left
     %header
       Changes in the <strong>git-rebase</strong> manual
@@ -128,7 +128,7 @@
       %li.no-change
         <span>1.7.7.1 → 1.7.9.4 no changes</span>
       %li
-        <a href="#"><span class="version">1.7.7.1</span> 
+        <a href="#"><span class="version">1.7.7.1</span>
         <span class="diff">
         <img src="/images/icons/green-dot.png" />
         <img src="/images/icons/green-dot.png" />
@@ -143,7 +143,7 @@
       %li.no-change
         <span>1.7.6.5 no changes</span>
       %li
-        <a href="#"><span class="version">1.7.6.1</span> 
+        <a href="#"><span class="version">1.7.6.1</span>
         <span class="diff">
         <img src="/images/icons/green-dot.png" />
         <img src="/images/icons/green-dot.png" />
@@ -158,7 +158,7 @@
       %li.no-change
         <span>1.7.5.1 → 1.7.6.0 no changes</span>
       %li
-        <a href="#"><span class="version">1.7.5.0</span> 
+        <a href="#"><span class="version">1.7.5.0</span>
         <span class="diff">
         <img src="/images/icons/green-dot.png" />
         <img src="/images/icons/green-dot.png" />
@@ -175,6 +175,5 @@
 
     %footer
       <span class="light">Check your version of git by running<br></span>
-      <strong>$</strong> 
+      <strong>$</strong>
       <input type="text" class="copyable" value="git --version" />
-
