--- a/app/views/downloads/installers/index.html.haml
+++ b/app/views/downloads/installers/index.html.haml
@@ -4,7 +4,7 @@
 - content_for :sidebar do
   %div.callout
     %p
-      The entire <strong><a href="#">Pro Git book</a></strong> written by Scott Chacon is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
+      The entire <strong><a href="#">Pro Git book</a></strong> written by Scott Chacon and Ben Straub is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
 
 %div#main
   %h1 Git Installers
@@ -17,27 +17,27 @@
             %td
               %strong Debian
             %td
-              =link_to "Stable", "http://packages.debian.org/stable/devel/git" 
+              =link_to "Stable", "http://packages.debian.org/stable/devel/git"
               <span class="light">|</span>
-              =link_to "Testing", "http://packages.debian.org/testing/devel/git" 
+              =link_to "Testing", "http://packages.debian.org/testing/devel/git"
               <span class="light">|</span>
               =link_to "Unstable", "http://packages.debian.org/unstable/devel/git"
           %tr
-            %td 
+            %td
               %strong Windows
-            %td 
+            %td
               =link_to "Stable", "https://github.com/msysgit/msysgit/releases"
               <span class="light">|</span>
               =link_to "Cygwin", "http://www.cygwin.com/setup.exe"
           %tr
             %td
               %strong Mac
-            %td 
+            %td
               =link_to "Stable", "http://sourceforge.net/projects/git-osx-installer/files/"
           %tr
-            %td 
+            %td
               %strong Solaris
-            %td 
+            %td
               =link_to "v8-10", "http://sunfreeware.com"
               <span class="light">|</span>
               =link_to "v9-10", "http://opencsw.org/packages/git/"
