--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -33,12 +33,12 @@
       </ul>
     </nav>
     <div id="front-book">
-      <img src="/images/pro-git-56x74@2x.jpg" width="56" height="74" />
+      <img src="/images/progit2.png" width="56" height="74" />
       <p>
         <strong><a href="/book">Pro Git</a></strong>
-        by Scott Chacon is available to
+        by Scott Chacon and Ben Straub is available to
         <a href="/book">read online for free</a>.
-        Dead tree versions are available on <a href="http://www.amazon.com/gp/product/1430218339?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.
+        Dead tree versions are available on <a href="http://www.amazon.com/Pro-Git-Scott-Chacon/dp/1484200772?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.
       </p>
     </div>
   </section>
