--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,6 +14,25 @@
       <img  src="/images/progit2.png" width="118" height="157"/>
       <div style="light">2nd Edition (2014)</div>
       <div class="switch"><a href="/book/<%= @book.code %>/v1">Switch to 1st Edition</a></div>
+      <div class="ebook-download">
+        <h2>Download Ebook</h2>
+        <div class="ebooks">
+          <% if @book.ebook_pdf %>
+            <a href="<%= @book.ebook_pdf %>"><img width="50px" src="/images/pdf.png"/></a>
+          <% end %>
+          <% if @book.ebook_epub %>
+            <a href="<%= @book.ebook_epub %>"><img width="50px" src="/images/epub.png"/></a>
+          <% end %>
+        </div>
+        <div class="ebooks">
+          <% if @book.ebook_mobi %>
+            <a href="<%= @book.ebook_mobi %>"><img width="50px" src="/images/mobi.png"/></a>
+          <% end %>
+          <% if @book.ebook_html %>
+            <a href="<%= @book.ebook_html %>"><img width="50px" src="/images/html.png"/></a>
+          <% end %>
+        </div>
+      </div>
     </div>
   <% else %>
     <div style="float:right;margin: -20px 40px 0 40px;">
@@ -25,12 +44,12 @@
     </div>
   <% end %>
   <p>
-  The entire Pro Git book, written by Scott Chacon and Ben Straub and published by Apress, is available here. All content is licensed under the <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution Non Commercial Share Alike 3.0 license</a>.  Print versions of the book are available on <a href="http://www.amazon.com/gp/product/1430218339?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.</>
+  The entire Pro Git book, written by Scott Chacon and Ben Straub and published by Apress, is available here. All content is licensed under the <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution Non Commercial Share Alike 3.0 license</a>. Print versions of the book are available on <a href="http://www.amazon.com/Pro-Git-Scott-Chacon/dp/1484200772?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.</>
   </p>
   <ol class='book-toc'>
     <% @book.chapters.each do |chapter| %>
     <li class='chapter'>
-    <h2><%= chapter.cs_number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
+    <h2><%= chapter.cs_number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%= chapter.title %></a></h2>
       <ol>
         <% chapter.sections.each do |section| %>
           <% if !section.title.empty? %>
