--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -36,7 +36,7 @@
     <div id="book-intro">
 
       <p>
-        Pro Git is written by Scott Chacon and published by Apress.
+        Pro Git is written by Scott Chacon and Ben Straub and published by Apress.
       </p>
 
       <p>
