--- a/app/views/books/_chapter_listings.html.erb
+++ b/app/views/books/_chapter_listings.html.erb
@@ -3,6 +3,8 @@
   <% start      = per_column * (column - 1)       -%>
   <% stop       = start + (per_column - 1)        -%>
   <% @book.chapters[start..stop].each do |chapter| %>
+  <% if chapter %>
+  <% if chapter.sections %>
   <li class='chapter'>
   <h2><%= chapter.cs_number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
     <ol>
@@ -16,5 +18,7 @@
       <% end %>
     </ol>
   </li>
+  <% end %>
+  <% end %>
   <% end %>
 </ol>
