--- a/app/views/books/_chapter_listings.html.erb
+++ b/app/views/books/_chapter_listings.html.erb
@@ -4,7 +4,7 @@
   <% stop       = start + (per_column - 1)        -%>
   <% @book.chapters[start..stop].each do |chapter| %>
   <% if chapter %>
-  <% if chapter.sections %>
+  <% if chapter.sections.size > 0 %>
   <li class='chapter'>
   <h2><%= chapter.cs_number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
     <ol>
