--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -48,6 +48,7 @@
   </p>
   <ol class='book-toc'>
     <% @book.chapters.each do |chapter| %>
+    <% next if chapter.sections.size == 0 %>
     <li class='chapter'>
     <h2><%= chapter.cs_number %>. <a href="/book/<%= @book.code %>/v<%= @book.edition %>/<%=u chapter.sections.first.slug %>"><%= chapter.title %></a></h2>
       <ol>
