last one i think

--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -63,6 +63,7 @@
         </span>
         <ol class="book-toc">
           <% @book.chapters.where("number >= 6").each do |chapter| %>
+          <% next if chapter.sections.size == 0 %>
             <li class="chapter">
               <h2>
                 <%= chapter.number.to_s + '.' %>
@@ -81,6 +82,7 @@
           <span class="header"> Pro Git </span>
           <ol class="book-toc">
             <% @book.chapters.where("number <= 5").each do |chapter| %>
+            <% next if chapter.sections.size == 0 %>
               <li class="chapter">
                 <h2>
                   <%= chapter.number.to_s + '.' %>
