--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -62,7 +62,7 @@
           Scott Chacon
         </span>
         <ol class="book-toc">
-          <% @book.chapters.where("number >= 6", :chapter_type => 'chapter').each do |chapter| %>
+          <% @book.chapters.where("number >= 6").where(:chapter_type => 'chapter').each do |chapter| %>
           <% next if chapter.sections.size == 0 %>
             <li class="chapter">
               <h2>
@@ -81,7 +81,7 @@
         <div id="book-cover-inside" class="face">
           <span class="header"> Pro Git </span>
           <ol class="book-toc">
-            <% @book.chapters.where("number <= 5", :chapter_type => 'chapter').each do |chapter| %>
+            <% @book.chapters.where("number <= 5").where(:chapter_type => 'chapter').each do |chapter| %>
             <% next if chapter.sections.size == 0 %>
               <li class="chapter">
                 <h2>
