--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -16,11 +16,11 @@
   </p>
 
   <p>
-    You do not need to subscribe: you will be Cc&apos;d in replies. Please keep the Cc list intact when replying (use &quot;Reply to all&quot;). Greylisting may delay your first post for a few hours.
+    You do not need to subscribe: you will be Cc&apos;d in replies. Please keep the Cc list intact when replying (use &quot;Reply to all&quot;). Greylisting may delay your first post for a few hours.  Note also that the list only accepts plain-text email; please disable HTML in your outgoing messages.
   </p>
 
   <p>
-    The <a href="http://dir.gmane.org/gmane.comp.version-control.git">archive</a> can be found on Gmane.  Click <a href="mailto:majordomo@vger.kernel.org?body=subscribe git">here</a> to subscribe.
+    The <a href="http://dir.gmane.org/gmane.comp.version-control.git">archive</a> can be found on Gmane.  Click <a href="mailto:majordomo@vger.kernel.org?body=subscribe git">here</a> to subscribe. If you have trouble sending to the list with your regular mail reader, you may also <a href="http://post.gmane.org/post.php?group=gmane.comp.version-control.git">post via gmane</a>.
   </p>
 
   <p>
