community: give bug reporting its own section
We already mention bug-reporting as a function of the
mailing list, but a first-time reader looking for
instructions on reporting a bug may skip over the whole
mailing list section. Let's make it easier for them to find
what they're looking for.

--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -27,6 +27,14 @@
     There is also <a href="https://groups.google.com/forum/?fromgroups#!forum/git-users">Git user mailing list</a> on Google Groups which is a nice place for beginners to ask about anything.
   </p>
 
+  <h2> Bug Reporting </h2>
+
+  <p>
+    Bugs can be reported directly to the mailing list (see above for
+    details). Note that you do not need to subscribe to the list to send
+    to it.
+  </p>
+
   <h2> IRC Channel </h2>
 
   <p>
