mention bug reporting on the main page
It may not be immediately obvious that the "community" link
is where you need to go to report bugs. Let's add "bug
reporting" to the synopsis.

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -27,7 +27,7 @@
           <%= link_to community_path do %>
             <img src="/images/icons/nav-community@2x.png" width="74" height="74" />
             <h3>Community</h3>
-            <p>Get involved! Mailing list, chat, development and more.</p>
+            <p>Get involved! Bug reporting, mailing list, chat, development and more.</p>
           <% end %>
         </li>
       </ul>
