community: link to sgtatham's bug reporting advice
This isn't perfect and isn't git-specific at all, but it
hopefully at least gives useful reading to people completely
new to reporting bugs. We should probably write a more
git-specific one that addresses problems we see, but that
doesn't yet exist.

--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -35,6 +35,12 @@
     to it.
   </p>
 
+  <p>
+    If you are new to submitting bugs, you might find <a
+      href="http://www.chiark.greenend.org.uk/~sgtatham/bugs.html">this
+      guide</a> helpful for producing useful bug reports.
+  </p>
+
   <h2> IRC Channel </h2>
 
   <p>
