--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -62,7 +62,7 @@
   <ul>
     <li><%= link_to "Google", "https://github.com/google", class: 'google' %></li>
     <li><%= link_to "Facebook", "https://github.com/facebook", class: 'facebook' %></li>
-    <li><%= link_to "Microsoft", "http://aspnetwebstack.codeplex.com", class: 'microsoft' %></li>
+    <li><%= link_to "Microsoft", "https://github.com/Microsoft", class: 'microsoft' %></li>
     <li><%= link_to "Twitter", "https://github.com/twitter", class: 'twitter' %></li>
     <li><%= link_to "LinkedIn", "https://github.com/linkedin", class: 'linked-in' %></li>
     <li><%= link_to "Netflix", "https://github.com/netflix", class: 'netflix' %></li>
