Update installation instruction for FreeBSD

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -21,7 +21,7 @@
   <code>$ zypper install git</code>
 
   <h3>FreeBSD</h3>
-  <code>$ cd /usr/ports/devel/git<br>$ make install</code>
+  <code>$ pkg install devel/git</code>
 
   <h3>Solaris 11 Express</h3>
   <code>$ pkg install developer/versioning/git</code>
