removed "," before "and".

--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -42,5 +42,5 @@ Translations started for
 <hr class="sidebar"/>
 <p>
 The source of this book is <a href="https://github.com/progit/progit2">hosted on GitHub.</a></br>
-Patches, suggestions, and comments are welcome.
+Patches, suggestions and comments are welcome.
 </p>
