--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <div class="site-source">
     This <a href="https://github.com/git/git-scm.com/blob/master/README.md#license">open sourced</a> site is <a href="https://github.com/git/git-scm.com">hosted on GitHub.</a><br>
-    Patches, suggestions, and comments are welcome.
+    Patches, suggestions and comments are welcome.
   </div>
   <div class="sfc-member">
     Git is a member of <a href="/sfc">Software Freedom Conservancy</a>
