--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <%= javascript_include_tag "/javascripts/selectivizr-min.js" %>
   <![endif]-->
 
-  <script src="http://use.typekit.com/jsq2fql.js" type="text/javascript"></script>
+  <script src="https://use.typekit.com/jsq2fql.js" type="text/javascript"></script>
   <script>
     //<![CDATA[
       try{Typekit.load();}catch(e){}
