Add git-bundle to the docs/ page
Altough I submitted a patch in commit a5f5ab6,
I realised git-bundle would still not appear at the docs/ page.

Some investigation taught me that I would have had to add it
in other files, too. (Fixed this)

--- a/app/views/doc/rebase.html.haml
+++ b/app/views/doc/rebase.html.haml
@@ -93,6 +93,7 @@
           %li= link_to "filter-branch"
           %li= link_to "instaweb"
           %li= link_to "archive"
+          %li= link_to "bundle"
 
         %h3 Server Admin
         %ul.unstyled
