--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -36,8 +36,9 @@ Translations started for
   <a href="/book/ro">Română</a>,
   <a href="/book/sr">Српски</a>,
   <a href="/book/th">ภาษาไทย</a>,
-  <a href="/book/vi">Tiếng Việt</a> and
-  <a href="/book/uk">Українська</a>.
+  <a href="/book/vi">Tiếng Việt</a> ,
+  <a href="/book/uk">Українська</a> and
+  <a href="/book/uz/v2">Ўзбек</a>.
 </p>
 <hr class="sidebar"/>
 <p>
