--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -29,14 +29,17 @@ Translations started for
   <a href="/book/ca">Català</a>,
   <a href="/book/eo">Esperanto</a>,
   <a href="/book/es-ni">Español (Nicaragua)</a>,
-  <a href="/book/fa" dir="rtl">یسراف</a>,                                                                                                                                <a href="/book/hi">हिन्दी</a>,
+  <a href="/book/fa" dir="rtl">یسراف</a>,
+  <a href="/book/hi">हिन्दी</a>,
   <a href="/book/hu">Magyar</a>,
   <a href="/book/no-nb">Norwegian Bokmål</a>,
   <a href="/book/ro">Română</a>,
   <a href="/book/sr">Српски</a>,
   <a href="/book/th">ภาษาไทย</a>,
-  <a href="/book/vi">Tiếng Việt</a> and
-  <a href="/book/uk">Українська</a>.
+  <a href="/book/vi">Tiếng Việt</a>,
+  <a href="/book/uk">Українська</a> and
+  <a href="/book/uz/v2">Ўзбек</a>.
+
 </p>
 <hr class="sidebar"/>
 <p>
