--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -43,7 +43,9 @@
   height: 402px;
   position: relative;
   background: transparent url(/images/bg/flippy-book.png) 0px 0 no-repeat;
-  @include perspective(1500);
+  -webkit-perspective: 1500;
+  -moz-perspective: 1500;
+  perspective: 1500;
 }
 #flippy-book #book-cover {
   width: 298px;
@@ -55,15 +57,25 @@
 .webkit #flippy-book #book-cover {
   left: auto;
   right: 6px;
-  @include transform-style(preserve-3d);
-  @include transition-duration(1.2s);
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transition-duration: 1.2s;
+  -moz-transition-duration: 1.2s;
+  transition-duration: 1.2s;
 }
 .webkit #flippy-book #book-cover.open {
-  @include transform-origin(-1px, 0);
-  @include rotateY(-180deg);
+  -webkit-transform-origin: -1px 0;
+  -moz-transform-origin: -1px 0;
+  transform-origin: -1px 0;
+  -webkit-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
 }
 .webkit #flippy-book #book-cover.close {
-  @include transform-origin(0, 0);
+  -webkit-transform-origin: 0 0;
+  -moz-transform-origin: 0 0;
+  transform-origin: 0 0;
 }
 #flippy-book #book-cover-outside {
   display: none;
@@ -93,13 +105,17 @@
   background: #fff url(/images/bg/flippy-book-inside-cover.png) 0 0 no-repeat;
 }
 .three-dee #flippy-book #book-cover-inside {
-  @include rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 #flippy-book .face {
   position: absolute;
 }
 .three-dee #flippy-book .face {
-  @include backface-visibility(hidden);
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 #flippy-book #book-inside-page {
@@ -127,7 +143,7 @@
   padding-left: 22px;
   @include background-image-2x(/images/icons/info, 18px, 17px, 40px 1px);
   &.visible {
-    @include inline-block;
+    display: inline-block;
   }
 }
 
