--- a/app/assets/stylesheets/downloads.css.scss
+++ b/app/assets/stylesheets/downloads.css.scss
@@ -22,7 +22,7 @@
   }
   .column-right {
     width: 45%;
-  } 
+  }
   p {
     padding-bottom: 1em;
     line-height: 1.4;
@@ -68,14 +68,22 @@
     text-align: center;
     background-position: 0 0;
     background-repeat: no-repeat;
-    @include transition-property(color);
-    @include transition-duration(.30s);
+    -webkit-transition-property: color;
+    -moz-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    transition-duration: 0.3s;
     img {
       display: block;
       margin: 0 auto 10px auto;
       opacity: 0.9;
-      @include transition-property(opacity);
-      @include transition-duration(.30s);
+      -webkit-transition-property: opacity;
+      -moz-transition-property: opacity;
+      transition-property: opacity;
+      -webkit-transition-duration: 0.3s;
+      -moz-transition-duration: 0.3s;
+      transition-duration: 0.3s;
     }
     h3 {
       font-size: 18px;
@@ -98,7 +106,7 @@
 }
 
 #os-filter-count {
-  color: $orange; 
+  color: $orange;
   display: none;
   left: 12px;
   position: relative;
