--- a/app/assets/stylesheets/git-scm.css.scss
+++ b/app/assets/stylesheets/git-scm.css.scss
@@ -1,6 +1,7 @@
-@import "compass";
-@include global-reset;
+// @import "compass";
+// @include global-reset;
 
+// @import "normalize";
 @import "mixins";
 @import "variables";
 @import "layout";
