--- a/app/assets/stylesheets/reference.css.scss
+++ b/app/assets/stylesheets/reference.css.scss
@@ -158,7 +158,7 @@ ol.reference-previous-versions {
         padding-left: 12px;
         padding-right: 16px;
         img {
-          @include inline-block;
+          display: inline-block;
           margin-right: -1px;
         }
       }
@@ -189,7 +189,7 @@ ol.reference-previous-versions {
       text-align: center;
       span {
         float: left;
-        @include inline-block;
+        display: inline-block;
         @include border-top-left-radius(10px);
         @include border-bottom-left-radius(10px);
         font-size: 10px;
