--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -11,7 +11,7 @@
   border-bottom: solid 1px $base-border-color;
   header {
     text-indent: -9999px;
-    height: 44px; 
+    height: 44px;
     border: solid 1px #366769;
     padding: 0;
     margin: 0;
@@ -25,7 +25,7 @@
     @include border-bottom-left-radius(3px);
     line-height: 1;
     td {
-      border-top: solid 1px #cfddde; 
+      border-top: solid 1px #cfddde;
     }
     td.category {
       font-size: 11px;
@@ -36,7 +36,7 @@
       color: $blue;
       opacity: 0.75;
       background-color: #f5fbfb;
-      border-right: solid 1px #cfddde; 
+      border-right: solid 1px #cfddde;
     }
     td.matches {
       font-size: 12px;
@@ -47,7 +47,9 @@
         color: $font-color;
         padding: 5px 12px;
         margin-bottom: 0;
-        @include transition-duration(0s);
+        -webkit-transition-duration: 0s;
+        -moz-transition-duration: 0s;
+        transition-duration: 0s;
         span.metadata {
           line-height: 1;
           margin-top: -3px;
@@ -61,7 +63,10 @@
           color: #fff;
           text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
           background: #55bec4;
-          @include background-image(linear-gradient(#55bec4, #54b2b7));
+          background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #55bec4), color-stop(100%, #54b2b7));
+          background-image: -webkit-linear-gradient(#55bec4, #54b2b7);
+          background-image: -moz-linear-gradient(#55bec4, #54b2b7);
+          background-image: linear-gradient(#55bec4, #54b2b7);
           span {
             color: #fff;
           }
