--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -12,10 +12,14 @@ p {
 }
 
 a {
-  @include link-colors($link-color, $link-hover-color, $link-focus-color, $link-active-color, $link-visited-color);
+  color: $link-color;
   text-decoration: none;
-  @include transition-property(color);
-  @include transition-duration(.30s);
+  -webkit-transition-property: color;
+  -moz-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  -moz-transition-duration: 0.3s;
+  transition-duration: 0.3s;
 }
 
 
@@ -271,7 +275,7 @@ cite {
 }
 
 a.subtle-button {
-  @include inline-block;
+  display: inline-block;
   border-top: solid 1px #dedcd4;
   border-left: solid 1px #dedcd4;
   border-right: solid 1px #dedcd4;
@@ -280,13 +284,26 @@ a.subtle-button {
   font-size: 12px;
   padding: 3px 20px;
   @include border-radius(3px);
-  @include background-image(linear-gradient(#f1f1e9, #eae9e1));
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f1f1e9), color-stop(100%, #eae9e1));
+  background-image: -webkit-linear-gradient(#f1f1e9, #eae9e1);
+  background-image: -moz-linear-gradient(#f1f1e9, #eae9e1);
+  background-image: -o-linear-gradient(#f1f1e9, #eae9e1);
+  background-image: linear-gradient(#f1f1e9, #eae9e1);
   @include box-shadow(0 1px 0 #f1f1e9);
-  @include transition-property(background-image);
-  @include transition-duration(.30s);
+  -webkit-transition-property: background-image;
+  -moz-transition-property: background-image;
+  transition-property: background-image;
+  -webkit-transition-duration: 0.3s;
+  -moz-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+
   &:hover {
     color: $link-color;
-    @include background-image(linear-gradient(darken(#f1f1e9, 2%), darken(#eae9e1, 2%)));
+    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #edede3), color-stop(100%, #e6e5db));
+    background-image: -webkit-linear-gradient(#edede3, #e6e5db);
+    background-image: -moz-linear-gradient(#edede3, #e6e5db);
+    background-image: -o-linear-gradient(#edede3, #e6e5db);
+    background-image: linear-gradient(#edede3, #e6e5db);
   }
 }
 
@@ -294,7 +311,7 @@ a#gui-os-filter {
   display: none;
   margin-top: 15px;
   &.visible {
-    @include inline-block;
+    display: inline-block;
   }
 }
 
