--- a/app/assets/stylesheets/front-page.css.scss
+++ b/app/assets/stylesheets/front-page.css.scss
@@ -35,15 +35,23 @@
     padding-left: 90px;
     background-position: 0 0;
     background-repeat: no-repeat;
-    @include transition-property(color);
-    @include transition-duration(.30s);
+    -webkit-transition-property: color;
+    -moz-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    transition-duration: 0.3s;
     img {
       margin-left: -90px;
       margin-right: -90px;
       float: left;
       opacity: 0.9;
-      @include transition-property(opacity);
-      @include transition-duration(.30s);
+      -webkit-transition-property: opacity;
+      -moz-transition-property: opacity;
+      transition-property: opacity;
+      -webkit-transition-duration: 0.3s;
+      -moz-transition-duration: 0.3s;
+      transition-duration: 0.3s;
     }
     h3 {
       font-size: 18px;
@@ -145,12 +153,26 @@ $monitor-height: 271px;
     width: 224px;
     padding: 5px 0;
     @include border-radius(2px);
-    @include background-image(linear-gradient(#1c868c, #186368));
+    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #1c868c), color-stop(100%, #186368));
+    background-image: -webkit-linear-gradient(#1c868c, #186368);
+    background-image: -moz-linear-gradient(#1c868c, #186368);
+    background-image: -o-linear-gradient(#1c868c, #186368);
+    background-image: linear-gradient(#1c868c, #186368);
     @include box-shadow(0 1px 0 #148a92);
-    @include transition-property(background-image);
-    @include transition-duration(.30s);
+    -webkit-transition-property: background-image;
+    -moz-transition-property: background-image;
+    -o-transition-property: background-image;
+    transition-property: background-image;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
     &:hover {
-      @include background-image(linear-gradient(darken(#1c868c, 2%), darken(#186368, 2%)));
+      background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #1a7e84), color-stop(100%, #165b60));
+      background-image: -webkit-linear-gradient(#1a7e84, #165b60);
+      background-image: -moz-linear-gradient(#1a7e84, #165b60);
+      background-image: -o-linear-gradient(#1a7e84, #165b60);
+      background-image: linear-gradient(#1a7e84, #165b60);
     }
   }
   &.mac {
@@ -186,8 +208,12 @@ $monitor-height: 271px;
       width: 108px;
       height: 65px;
       opacity: 0.85;
-      @include transition-property(opacity);
-      @include transition-duration(.30s);
+      -webkit-transition-property: opacity;
+      -moz-transition-property: opacity;
+      transition-property: opacity;
+      -webkit-transition-duration: 0.3s;
+      -moz-transition-duration: 0.3s;
+      transition-duration: 0.3s;
       background-position: 0 0;
       background-repeat: no-repeat;
       text-indent: -9999px;
@@ -253,7 +279,7 @@ a.icon {
   padding-left: 30px;
   height: 30px;
   line-height: 36px;
-  @include inline-block;
+  display: inline-block;
   &.gui {
     @include background-image-2x(/images/icons/gui, 18px, 24px, 6px 3px);
   }
