Kill homepage IDs

--- a/app/assets/stylesheets/front-page.scss
+++ b/app/assets/stylesheets/front-page.scss
@@ -1,16 +1,16 @@
-#front-content {
+.homepage-content {
   @include clearfix;
   overflow: visible;
-
-  #front-navigation {
-    width: 618px;
-    float: left;
-    border-right: solid 1px $base-border-color;
-    margin-bottom: 24px;
-  }
 }
 
-#front-nav {
+.homepage-content-main {
+  width: 618px;
+  float: left;
+  border-right: solid 1px $base-border-color;
+  margin-bottom: 24px;
+}
+
+.homepage-nav {
   @include clearfix;
   ul {
     @extend .unstyled;
@@ -20,10 +20,10 @@
       width: 280px;
       float: left;
       margin-bottom: 20px;
-      &#nav-about, &#nav-downloads {
+      &.nav-about, &.nav-downloads {
         margin-right: 30px;
       }
-      &#nav-about, &#nav-documentation {
+      &.nav-about, &.nav-documentation {
         margin-bottom: 40px;
       }
     }
@@ -73,7 +73,7 @@
   }
 }
 
-#front-book {
+.homepage-book-callout {
   padding-top: 20px;
   float: left;
   width: 590px;
@@ -90,7 +90,7 @@
 $monitor-width: 313px;
 $monitor-height: 271px;
 
-#front-downloads {
+.homepage-downloads {
   width: 313px;
   float: right;
   position: relative;
@@ -190,7 +190,7 @@ $monitor-height: 271px;
   }
 }
 
-#companies-projects {
+.companies-projects {
   clear: both;
   border-top: solid 1px $base-border-color;
   padding-top: 20px;
