--- a/app/views/shared/_monitor.html.erb
+++ b/app/views/shared/_monitor.html.erb
@@ -11,5 +11,5 @@
     <%= latest_release_date %>
   </span>
 
-  <%= link_to "Download Source Code", "https://www.kernel.org/pub/software/scm/git/", {:class => 'button', :id => 'download-link'} %>
+  <%= link_to "Download Source Code", "https://www.kernel.org/pub/software/scm/git/", {:class => 'button js-download-link'} %>
 </div>
