--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,29 +1,29 @@
-<div id="front-content">
-  <section id="front-navigation">
-    <nav id="front-nav">
+<div class="homepage-content">
+  <section class="homepage-content-main">
+    <nav class="homepage-nav">
       <ul>
-        <li id="nav-about">
+        <li class="nav-about">
           <%= link_to about_path do %>
             <img src="/images/icons/nav-about@2x.png" width="74" height="74" />
             <h3>About</h3>
             <p>The advantages of Git compared to other source control systems.</p>
           <% end %>
         </li>
-        <li id="nav-documentation">
+        <li class=nav-documentation">
           <%= link_to doc_path do %>
             <img src="/images/icons/nav-documentation@2x.png" width="74" height="74" />
             <h3>Documentation</h3>
             <p>Command reference pages, Pro Git book content, videos and other material.</p>
           <% end %>
         </li>
-        <li id="nav-downloads">
+        <li class="nav-downloads">
           <%= link_to downloads_path do %>
             <img src="/images/icons/nav-downloads@2x.png" width="74" height="74" />
             <h3>Downloads</h3>
             <p>GUI clients and binary releases for all major platforms.</p>
           <% end %>
         </li>
-        <li id="nav-community">
+        <li class="nav-community">
           <%= link_to community_path do %>
             <img src="/images/icons/nav-community@2x.png" width="74" height="74" />
             <h3>Community</h3>
@@ -32,7 +32,7 @@
         </li>
       </ul>
     </nav>
-    <div id="front-book">
+    <div class="homepage-book-callout">
       <img src="/images/progit2.png" width="56" height="74" />
       <p>
         <strong><a href="/book">Pro Git</a></strong>
@@ -42,22 +42,22 @@
       </p>
     </div>
   </section>
-  <section id="front-downloads">
+  <section class="homepage-downloads">
     <%= partial 'shared/monitor' %>
     <table>
       <tr>
-        <td nowrap="true"><%= link_to "Graphical UIs", "/downloads/guis", class: 'icon gui', id: 'gui-link' %></td>
+        <td nowrap="true"><%= link_to "Graphical UIs", "/downloads/guis", class: 'icon gui js-gui-link' %></td>
         <td nowrap="true"><%= link_to "Tarballs", "https://www.kernel.org/pub/software/scm/git/", class: 'icon older-releases' %></td>
       </tr>
       <tr>
-        <td nowrap="true"><%= link_to "Windows Build", "/download/win", class: 'icon windows', id: 'alt-link' %></td>
+        <td nowrap="true"><%= link_to "Windows Build", "/download/win", class: 'icon windows js-alt-link' %></td>
         <td nowrap="true"><%= link_to "Source Code", "https://github.com/git/git", class: 'icon source' %></td>
       </tr>
     </table>
 </section>
 </div>
 
-<section id="companies-projects">
+<section class="companies-projects">
   <h3> Companies &amp; Projects Using Git </h3>
   <ul>
     <li><%= link_to "Google", "https://github.com/google", class: 'google' %></li>
