--- a/app/assets/stylesheets/git-scm.scss
+++ b/app/assets/stylesheets/git-scm.scss
@@ -5,7 +5,7 @@
 @import "typography";
 @import "downloads";
 @import "search";
-@import "front-page";
+@import "homepage";
 @import "sidebar";
 @import "reference";
 @import "forms";
