More general layout cleanup

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,4 +1,6 @@
 body {
+  margin: 0;
+  padding: 0;
   font-size: $base-font-size;
   line-height: $base-line-height;
   font-family: $base-font-family;
@@ -13,7 +15,7 @@ body {
 }
 
 // High level structure
-.inner {
+.container {
   @include clearfix;
   position: relative;
   width: $page-width;
@@ -28,7 +30,7 @@ aside {
 }
 
 
-#content {
+.site-content {
   width: 702px;
   float: right;
 }
@@ -65,12 +67,13 @@ aside {
   }
 }
 
-#masthead {
+.masthead {
   height: 295px;
   margin-top: -20px;
   margin-bottom: 2em;
   @include background-image-2x('/images/bg/isometric-grid', 35px, 21px, top right, repeat);
-  .inner {
+
+  .container {
     padding-top: 20px;
     p {
       width: 558px;
@@ -291,7 +294,7 @@ a.dropdown-trigger {
 }
 
 // Footer
-footer {
+.site-footer {
   clear: both;
   @include clearfix;
   margin-top: 35px;
@@ -300,21 +303,23 @@ footer {
   color: $light-font-color;
   font-size: 12px;
   line-height: $base-line-height * 0.7;
+
   a {
     color: darken($light-font-color, 35%);
     &:hover {
       color: darken($light-font-color, 55%);
     }
   }
-  .site-source {
-    float: left;
-    @include background-image-2x('/images/icons/code', 38px, 23px, 0 2px);
-    padding-left: 46px;
-  }
-  .sfc-member {
-    float: right;
-    text-align: right;
-  }
+}
+
+.site-source {
+  float: left;
+  @include background-image-2x('/images/icons/code', 38px, 23px, 0 2px);
+  padding-left: 46px;
+}
+.sfc-member {
+  float: right;
+  text-align: right;
 }
 
 table.benchmarks {
