--- a/app/views/layouts/errors.html.erb
+++ b/app/views/layouts/errors.html.erb
@@ -10,7 +10,7 @@
     <% end %>
   </head>
   <body>
-    <div class="inner">
+    <div class="container">
       <%= yield %>
     </div>
   </body>
