--- a/app/views/shared/_masthead.html.erb
+++ b/app/views/shared/_masthead.html.erb
@@ -1,5 +1,5 @@
-<div id="masthead">
-  <div class="inner">
+<div class="masthead">
+  <div class="container">
     <p>
       Git is a <%= link_to "free and open source", "/about/free-and-open-source" %>
       distributed version control system designed to handle everything from small to
@@ -20,5 +20,5 @@
     </p>
 
     <img class="illustration" src="/images/branching-illustration@2x.png" width="389" height="251" />
-  </div> <!-- .inner -->
-</div> <!-- #masthead -->
+  </div>
+</div>
