--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,4 +1,6 @@
 body {
+  margin: 0;
+  padding: 0;
   font-size: $base-font-size;
   line-height: $base-line-height;
   font-family: $base-font-family;
